# unicam-lib

./: CMakeLists.txt  README.md  main.cpp  package.xml
cmake/: FindOpenNI2.cmake
headers/: FreenectProvider.h  RealsenseCamera.h  RealsenseDevice.h  RealsenseProvider.h  XtionCamera.h  XtionProvider.h  frame_data.h  freenectCamera.h  io_interface.h
headers/orientationControl/: CameraOrientationController.h
headers/unicam/: UnicamApi.h  UnicamCamera.h  UnicamDeviceProvider.h  UnicamDevices.h
src/: CameraOrientationController.cpp  FreenectProvider.cpp  RealsenseDevice.cpp  RealsenseProvider.cpp  XtionCamera.cpp  XtionProvider.cpp  freenectCamera.cpp  io_interface.cxx  xtion2_ros_node.cxx
